@@ -1,3 +1,11 @@
+2004-11-29  Kensuke Matsuzaki  <zakki@peppermint.jp>
+
+	* winmultiwindowwm.c:
+	Fixed windows.h include for cygwin.
+	
+	* winmultiwindowwindow.c:
+	Bugzilla #1945: Stop unnecessary reordering.
+
 2004-11-24  Alexander Gottwald  <ago at freedesktop dot org>
 
 	* winmultiwindowwm.c:
